force-app/main/default/objects/B25__Reservation__c/B25__Reservation__c.object-meta.xml
<CustomObject>
    <description>The object holding all information of each individual booking.</description>
    <label>Reservation</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Reservation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>