force-app/main/default/objects/B25__Reservation__c/fields/B25__ABRCompositeKey__c.field-meta.xml
<CustomField>
    <fullName>B25__ABRCompositeKey__c</fullName>
    <description>Booker25 system field. Please don&apos;t edit.</description>
    <externalId>true</externalId>
    <inlineHelpText>Champ du système Booker25. Veuillez ne pas modifier.</inlineHelpText>
    <label>ABR Composite Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>