force-app/main/default/objects/B25__Reservation__c/fields/B25__ABRSerialNr__c.field-meta.xml
<CustomField>
    <fullName>B25__ABRSerialNr__c</fullName>
    <description>Used to identify series of Reservations created by an Automated Booking Rule.</description>
    <inlineHelpText>Utilisé pour identifier les séries de réservations créées par une Automated Booking Rule.</inlineHelpText>
    <label>ABR Serial Nr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>