force-app/main/default/objects/B25__Reservation__c/fields/B25__ABRSerialPartNr__c.field-meta.xml
<CustomField>
    <fullName>B25__ABRSerialPartNr__c</fullName>
    <description>Used to identify multiple &apos;daily&apos; Reservations that are part of a single series.</description>
    <inlineHelpText>Utilisé pour identifier plusieurs réservations « quotidiennes » qui font partie d’une seule série.</inlineHelpText>
    <label>ABR Serial Part Nr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>