force-app/main/default/objects/B25__Reservation__c/fields/B25__Account__c.field-meta.xml
<CustomField>
    <fullName>B25__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>