force-app/main/default/objects/B25__Reservation__c/fields/B25__Additional_Outlook_Data__c.field-meta.xml
<CustomField>
    <fullName>B25__Additional_Outlook_Data__c</fullName>
    <description>Stores additional data required for Booker25 to keep reservations in sync with Outlook.</description>
    <inlineHelpText>Stocke des données supplémentaires nécessaires à Booker25 pour garder les réservations synchronisées avec Outlook.</inlineHelpText>
    <label>Additional Outlook Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>