force-app/main/default/objects/B25__Reservation__c/fields/B25__AutomatedBookingRule__c.field-meta.xml
<CustomField>
    <fullName>B25__AutomatedBookingRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The rule that was used to create this Reservation.</description>
    <inlineHelpText>La règle qui a été utilisée pour créer cette réservation.</inlineHelpText>
    <label>Automated Booking Rule</label>
    <referenceTo>B25__AutomatedBookingRule__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>