force-app/main/default/objects/B25__Reservation__c/fields/B25__Base_Price__c.field-meta.xml
<CustomField>
    <fullName>B25__Base_Price__c</fullName>
    <description>Base price of the Resource.</description>
    <inlineHelpText>Prix de base de la ressource.</inlineHelpText>
    <label>Base Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>