force-app/main/default/objects/B25__Reservation__c/fields/B25__Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>B25__Calculation_Method__c</fullName>
    <description>Calculation method that determines the total price of a Reservation. Uses the Base Price as a unit of multiplication.</description>
    <inlineHelpText>Méthode de calcul qui détermine le prix total d’une réservation. Utilise le prix de base comme unité de multiplication.</inlineHelpText>
    <label>Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PER_PERSON</fullName>
            </value>
            <value>
                <fullName>PER_TIME_UNIT</fullName>
                <default>true</default>
                <label>PER_TIME_UNIT</label>
            </value>
            <value>
                <fullName>PER_PERSON_PER_TIME_UNIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>