force-app/main/default/objects/B25__Reservation__c/fields/B25__End__c.field-meta.xml
<CustomField>
    <fullName>B25__End__c</fullName>
    <description>The end time in your timezone</description>
    <inlineHelpText>L’heure de fin dans votre fuseau horaire</inlineHelpText>
    <label>User End Datetime</label>
    <type>DateTime</type>
</CustomField>