force-app/main/default/objects/B25__Reservation__c/fields/B25__End_Buffer_Duration__c.field-meta.xml
<CustomField>
    <fullName>B25__End_Buffer_Duration__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The duration of the buffer at the end of the reservation in minutes.</description>
    <inlineHelpText>La durée du tampon à la fin de la réservation en minutes.</inlineHelpText>
    <label>End Buffer Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>