force-app/main/default/objects/B25__Reservation__c/fields/B25__End_Date__c.field-meta.xml
<CustomField>
    <fullName>B25__End_Date__c</fullName>
    <description>The end date of a booking on the Calendar.</description>
    <inlineHelpText>La date de fin d’une réservation dans le calendrier.</inlineHelpText>
    <label>Local End Date</label>
    <type>Date</type>
</CustomField>