force-app/main/default/objects/B25__Reservation__c/fields/B25__End_GMT__c.field-meta.xml
<CustomField>
    <fullName>B25__End_GMT__c</fullName>
    <description>The end time of the Reservation in GMT.</description>
    <formula>TEXT(B25__End__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>L’heure de fin de la réservation au fuseau GMT.</inlineHelpText>
    <label>End (GMT)</label>
    <type>Text</type>
</CustomField>