force-app/main/default/objects/B25__Reservation__c/fields/B25__End_Local_DateTime__c.field-meta.xml
<CustomField>
    <fullName>B25__End_Local_DateTime__c</fullName>
    <description>The local End Date Time based on the Resource Timezone</description>
    <formula>TEXT(B25__End_Date__c) + &apos; &apos; +  B25__Local_End_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>L’heure et la date de fin locales basées sur le fuseau horaire de la ressource</inlineHelpText>
    <label>Local End Datetime</label>
    <type>Text</type>
</CustomField>