force-app/main/default/objects/B25__Reservation__c/fields/B25__EndLocal__c.field-meta.xml
<CustomField>
    <fullName>B25__EndLocal__c</fullName>
    <description>The end time in the Resource&apos;s local timezone.</description>
    <inlineHelpText>L’heure de fin dans le fuseau horaire local de la ressource.</inlineHelpText>
    <label>End (local time)</label>
    <type>DateTime</type>
</CustomField>