force-app/main/default/objects/B25__Reservation__c/fields/B25__Event_Id__c.field-meta.xml
<CustomField>
    <fullName>B25__Event_Id__c</fullName>
    <description>When &apos;Create events for reservations&apos; is checked in Booker25 settings, this is the ID for the event related to a specific Reservation record.</description>
    <inlineHelpText>Lorsque l’option « Créer des événements pour les réservations » est cochée dans les paramètres de Booker25, il s’agit de l’identifiant de l’événement lié à un enregistrement de réservation spécifique.</inlineHelpText>
    <label>Event Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>