force-app/main/default/objects/B25__Reservation__c/fields/B25__Google_Id__c.field-meta.xml
<CustomField>
    <fullName>B25__Google_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique id of the event in Google Calendar this reservation is synced to.</description>
    <externalId>true</externalId>
    <inlineHelpText>Identifiant unique de l’événement dans Google Agenda avec lequel cette réservation est synchronisée.</inlineHelpText>
    <label>Google Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>