force-app/main/default/objects/B25__Reservation__c/fields/B25__Group__c.field-meta.xml
<CustomField>
    <fullName>B25__Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Group to which this Reservation is linked.</description>
    <inlineHelpText>Le groupe auquel cette réservation est liée.</inlineHelpText>
    <label>Group</label>
    <referenceTo>B25__Group__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>