force-app/main/default/objects/B25__Reservation__c/fields/B25__Has_Conflicts__c.field-meta.xml
<CustomField>
    <fullName>B25__Has_Conflicts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this Reservation conflicts with other Reservation(s).</description>
    <inlineHelpText>Si cette option est cochée, cette réservation entre en conflit avec une ou plusieurs autres réservations.</inlineHelpText>
    <label>Has Conflicts</label>
    <type>Checkbox</type>
</CustomField>