force-app/main/default/objects/B25__Reservation__c/fields/B25__Has_Resource_Conflicts__c.field-meta.xml
<CustomField>
    <fullName>B25__Has_Resource_Conflicts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this Reservation has Resource conflicts with other Reservation(s).</description>
    <inlineHelpText>Si cette option est cochée, cette réservation présente des conflits de ressources avec d’autres réservations.</inlineHelpText>
    <label>Has Resource Conflicts</label>
    <type>Checkbox</type>
</CustomField>