force-app/main/default/objects/B25__Reservation__c/fields/B25__Hover__c.field-meta.xml
<CustomField>
    <fullName>B25__Hover__c</fullName>
    <formula>&apos;Hover me!&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hover</label>
    <type>Text</type>
</CustomField>