force-app/main/default/objects/B25__Reservation__c/fields/B25__Info__c.field-meta.xml
<CustomField>
    <fullName>B25__Info__c</fullName>
    <formula>&apos;For more information&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Info</label>
    <type>Text</type>
</CustomField>