force-app/main/default/objects/B25__Reservation__c/fields/B25__IsUnassigned__c.field-meta.xml
<CustomField>
    <fullName>B25__IsUnassigned__c</fullName>
    <description>Checked when a Resource is reservable and has no parent.</description>
    <formula>AND(B25__Resource__r.B25__Resource_Type__r.B25__Rentable__c, ISBLANK(B25__Resource__r.B25__Parent__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Coché lorsqu’une ressource est réservable et n’a pas de parent.</inlineHelpText>
    <label>Is Unassigned</label>
    <type>Checkbox</type>
</CustomField>