force-app/main/default/objects/B25__Reservation__c/fields/B25__Lead__c.field-meta.xml
<CustomField>
    <fullName>B25__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>