force-app/main/default/objects/B25__Reservation__c/fields/B25__Local_End_Time__c.field-meta.xml
<CustomField>
    <fullName>B25__Local_End_Time__c</fullName>
    <description>The local end time in 24h format. This field is meant for output only and not for input.</description>
    <inlineHelpText>L’heure de fin locale au format 24 h. Ce champ est destiné à la sortie uniquement et non à la saisie.</inlineHelpText>
    <label>Local End Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>