force-app/main/default/objects/B25__Reservation__c/fields/B25__Notes__c.field-meta.xml
<CustomField>
    <fullName>B25__Notes__c</fullName>
    <description>Additional notes regarding the Reservation.</description>
    <inlineHelpText>Remarques supplémentaires concernant la réservation.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>