force-app/main/default/objects/B25__Reservation__c/fields/B25__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>B25__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Opportunity to which this Reservation is linked.</description>
    <inlineHelpText>L’opportunité à laquelle cette réservation est liée.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reserveringen</relationshipName>
    <type>Lookup</type>
</CustomField>