force-app/main/default/objects/B25__Reservation__c/fields/B25__OpportunityLineItem__c.field-meta.xml
<CustomField>
    <fullName>B25__OpportunityLineItem__c</fullName>
    <description>Used to identify Reservations created by an ABR for an Opportunity Line Item.</description>
    <inlineHelpText>Utilisé pour identifier les réservations créées par une ABR pour un poste d’opportunité.</inlineHelpText>
    <label>OpportunityLineItem</label>
    <length>18</length>
    <type>Text</type>
</CustomField>