force-app/main/default/objects/B25__Reservation__c/fields/B25__Outlook_ICalUId__c.field-meta.xml
<CustomField>
    <fullName>B25__Outlook_ICalUId__c</fullName>
    <description>The unique identifier of the Outlook event linked to this reservation.</description>
    <externalId>true</externalId>
    <inlineHelpText>L’identifiant unique de l’événement Outlook lié à cette réservation.</inlineHelpText>
    <label>Outlook iCalUId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>