force-app/main/default/objects/B25__Reservation__c/fields/B25__Outlook_Id__c.field-meta.xml
<CustomField>
    <fullName>B25__Outlook_Id__c</fullName>
    <description>The id of the Outlook event on the primary Outlook calendar.</description>
    <externalId>true</externalId>
    <label>Outlook Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>