force-app/main/default/objects/B25__Reservation__c/fields/B25__Outlook_Series_Master_Id__c.field-meta.xml
<CustomField>
    <fullName>B25__Outlook_Series_Master_Id__c</fullName>
    <description>Holds the id of the master event in Outlook if the event is recurring.</description>
    <externalId>true</externalId>
    <inlineHelpText>Indique l’identifiant de l’événement principal dans Outlook si l’événement est récurrent.</inlineHelpText>
    <label>Outlook Series Master Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>