force-app/main/default/objects/B25__Reservation__c/fields/B25__Price__c.field-meta.xml
<CustomField>
    <fullName>B25__Price__c</fullName>
    <description>When filled in, this overrides the value in the Total Price field.</description>
    <inlineHelpText>Lorsque ce champ est rempli, ce champ remplace la valeur du champ de prix total.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>