force-app/main/default/objects/B25__Reservation__c/fields/B25__Quantity__c.field-meta.xml
<CustomField>
    <fullName>B25__Quantity__c</fullName>
    <description>The quantity the Reservation occupies (e.g. in a Dimension).</description>
    <inlineHelpText>La quantité que la réservation occupe (par exemple, dans une dimension).</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>