force-app/main/default/objects/B25__Reservation__c/fields/B25__Recurring_Reservation__c.field-meta.xml
<CustomField>
    <fullName>B25__Recurring_Reservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to a Recurring Reservation record if this Reservation record is recurring.</description>
    <inlineHelpText>Une recherche d’un enregistrement de réservation récurrent si cet enregistrement de réservation est récurrent.</inlineHelpText>
    <label>Recurring Reservation</label>
    <referenceTo>B25__Recurring_Reservation__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>