force-app/main/default/objects/B25__Reservation__c/fields/B25__Reservation_Template__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reservation Template</label>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>