force-app/main/default/objects/B25__Reservation__c/fields/B25__Reservation_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Reservation Type related to the Reservation record.</description>
    <inlineHelpText>Le type de réservation lié à cet enregistrement de réservation.</inlineHelpText>
    <label>Reservation Type</label>
    <referenceTo>B25__Reservation_Type__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>