force-app/main/default/objects/B25__Reservation__c/fields/B25__Resource__c.field-meta.xml
<CustomField>
    <fullName>B25__Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Resource to which this Reservation is linked.</description>
    <inlineHelpText>La ressource à laquelle cette réservation est liée.</inlineHelpText>
    <label>Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>B25__Resource__c.B25__Resource_Type__r.B25__Rentable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>B25__Resource__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>