force-app/main/default/objects/B25__Reservation__c/fields/B25__ResourceName__c.field-meta.xml
<CustomField>
    <fullName>B25__ResourceName__c</fullName>
    <description>Name of the Resource and, if these exist, the names of the parent and grand-parent.</description>
    <formula>B25__Resource__r.Name +
IF(
  ISNULL(B25__Resource__r.B25__Parent__c),
  &apos;&apos;,
  &apos; (&apos; + B25__Resource__r.B25__Parent__r.Name + IF(
	OR(ISNULL(B25__Resource__r.B25__Parent__r.B25__Parent__c), ISBLANK(B25__Resource__r.B25__Parent__r.B25__Parent__r.Name)),
	&apos;&apos;,
	&apos;, &apos; + B25__Resource__r.B25__Parent__r.B25__Parent__r.Name
  ) + &apos;)&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Nom de la ressource et, s’ils existent, les noms du parent et du grand-parent.</inlineHelpText>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>