force-app/main/default/objects/B25__Reservation__c/fields/B25__ResourceTimezone__c.field-meta.xml
<CustomField>
    <fullName>B25__ResourceTimezone__c</fullName>
    <description>The timezone of the area in which the Resource is located.</description>
    <formula>TEXT(B25__Resource__r.B25__Timezone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Le fuseau horaire de la zone dans laquelle se trouve la ressource.</inlineHelpText>
    <label>ResourceTimezone</label>
    <type>Text</type>
</CustomField>