force-app/main/default/objects/B25__Reservation__c/fields/B25__Sample_Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>B25__Sample_Custom_Field__c</fullName>
    <description>This is a sample custom field.</description>
    <inlineHelpText>Il s’agit d’un exemple de champ personnalisé.</inlineHelpText>
    <label>Sample Custom Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>