force-app/main/default/objects/B25__Reservation__c/fields/B25__SelectedLayout__c.field-meta.xml
<CustomField>
    <fullName>B25__SelectedLayout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The layout of the Resource on which a Reservation is created.</description>
    <inlineHelpText>La disposition de la ressource pour laquelle une réservation est créée.</inlineHelpText>
    <label>Selected Layout</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>B25__ResourceLayout__c.B25__Resource__c</field>
            <operation>equals</operation>
            <valueField>$Source.B25__Resource__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>B25__ResourceLayout__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>