force-app/main/default/objects/B25__Reservation__c/fields/B25__SelectedTimeframe__c.field-meta.xml
<CustomField>
    <fullName>B25__SelectedTimeframe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Timeframe chosen to use for this Reservation.</description>
    <inlineHelpText>La période sélectionnée pour cette réservation.</inlineHelpText>
    <label>Selected Timeframe</label>
    <referenceTo>B25__Timeframe__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>