force-app/main/default/objects/B25__Reservation__c/fields/B25__Service_Costs__c.field-meta.xml
<CustomField>
    <fullName>B25__Service_Costs__c</fullName>
    <description>A rollup on the Subtotal field of the Service Reservation child records.</description>
    <inlineHelpText>Un rollup sur le champ du sous-total des enregistrements enfants de la réservation de service.</inlineHelpText>
    <label>Service Costs</label>
    <summarizedField>B25__Service_Reservation__c.B25__Subtotal__c</summarizedField>
    <summaryForeignKey>B25__Service_Reservation__c.B25__Reservation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>