force-app/main/default/objects/B25__Reservation__c/fields/B25__Skip_Subtotal_Calculation__c.field-meta.xml
<CustomField>
    <fullName>B25__Skip_Subtotal_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is unchecked, the subtotal will be calculated (based on calculation method, duration, nr of people, and/or any custom price calculation) and overwritten when saving a Reservation.</description>
    <inlineHelpText>Si cette option n’est pas cochée, le sous-total sera calculé et écrasé lors de l’enregistrement d’une réservation.</inlineHelpText>
    <label>Skip Subtotal Calculation</label>
    <type>Checkbox</type>
</CustomField>