force-app/main/default/objects/B25__Reservation__c/fields/B25__Staff__c.field-meta.xml
<CustomField>
    <fullName>B25__Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Staff to which this Reservation is linked.</description>
    <inlineHelpText>Le personnel auquel cette réservation est liée.</inlineHelpText>
    <label>Staff</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>B25__Staff__c.B25__Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>B25__Staff__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>