force-app/main/default/objects/B25__Reservation__c/fields/B25__Start__c.field-meta.xml
<CustomField>
    <fullName>B25__Start__c</fullName>
    <description>The start time in your timezone</description>
    <inlineHelpText>L’heure de début dans votre fuseau horaire</inlineHelpText>
    <label>User Start Datetime</label>
    <type>DateTime</type>
</CustomField>