force-app/main/default/objects/B25__Reservation__c/fields/B25__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>B25__Start_Date__c</fullName>
    <description>The start date of a booking on the Calendar.</description>
    <inlineHelpText>La date de début d’une réservation dans le calendrier.</inlineHelpText>
    <label>Local Start Date</label>
    <type>Date</type>
</CustomField>