force-app/main/default/objects/B25__Reservation__c/fields/B25__Start_GMT__c.field-meta.xml
<CustomField>
    <fullName>B25__Start_GMT__c</fullName>
    <description>The start time of the Reservation in GMT.</description>
    <formula>TEXT(B25__Start__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>L’heure de début de la réservation au fuseau GMT.</inlineHelpText>
    <label>Start (GMT)</label>
    <type>Text</type>
</CustomField>