force-app/main/default/objects/B25__Reservation__c/fields/B25__Start_Local_DateTime__c.field-meta.xml
<CustomField>
    <fullName>B25__Start_Local_DateTime__c</fullName>
    <description>The local Start Date Time based on the Resource Timezone</description>
    <formula>TEXT(B25__Start_Date__c) + &apos; &apos; + B25__Local_Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>La date et l’heure de début locales basées sur le fuseau horaire de la ressource</inlineHelpText>
    <label>Local Start Datetime</label>
    <type>Text</type>
</CustomField>