force-app/main/default/objects/B25__Reservation__c/fields/B25__StartLocal__c.field-meta.xml
<CustomField>
    <fullName>B25__StartLocal__c</fullName>
    <description>The start time in the Resource&apos;s local timezone.</description>
    <inlineHelpText>L’heure de début dans le fuseau horaire local de la ressource.</inlineHelpText>
    <label>Start (local time)</label>
    <type>DateTime</type>
</CustomField>