force-app/main/default/objects/B25__Reservation__c/fields/B25__Status__c.field-meta.xml
<CustomField>
    <fullName>B25__Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the Reservation Status record to which this Reservation record belongs.</description>
    <inlineHelpText>Une recherche de l’enregistrement de statut de la réservation auquel appartient cet enregistrement de réservation.</inlineHelpText>
    <label>Status</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>B25__Reservation_Status__c.B25__Is_Active__c</field>
            <operation>notEqual</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>B25__Reservation_Status__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>