force-app/main/default/objects/B25__Reservation__c/fields/B25__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>B25__Subtotal__c</fullName>
    <description>Total price excluding service costs.</description>
    <inlineHelpText>Prix total hors frais de service.</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>