force-app/main/default/objects/B25__Reservation__c/fields/B25__Title__c.field-meta.xml
<CustomField>
    <fullName>B25__Title__c</fullName>
    <description>The title that shows up on the Calendar for this Reservation.</description>
    <inlineHelpText>Le titre qui s’affiche sur le calendrier pour cette réservation.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>