force-app/main/default/objects/B25__Reservation__c/fields/B25__Total_Price__c.field-meta.xml
<CustomField>
    <fullName>B25__Total_Price__c</fullName>
    <description>Total price of a Reservation based on the Base Price unit and Calculation Method.</description>
    <formula>IF(ISBLANK(B25__Price__c), B25__Subtotal__c + B25__Service_Costs__c, B25__Price__c)</formula>
    <inlineHelpText>Prix total d’une réservation basé sur l’unité de prix de base et la méthode de calcul.</inlineHelpText>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>