force-app/main/default/objects/B25__Reservation__c/fields/B25__Unique_Outlook_Id__c.field-meta.xml
<CustomField>
    <fullName>B25__Unique_Outlook_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The id of the Outlook event on the primary Outlook calendar.</description>
    <externalId>true</externalId>
    <inlineHelpText>L’identifiant de l’événement Outlook sur le calendrier Outlook principal.</inlineHelpText>
    <label>Unique Outlook Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>