force-app/main/default/objects/B25__Reservation__c/fields/B25__User__c.field-meta.xml
<CustomField>
    <fullName>B25__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User record linked to the Reservation record.</description>
    <inlineHelpText>L’enregistrement de l’utilisateur lié à l’enregistrement de la réservation.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>