force-app/main/default/objects/B25__Reservation__c/fields/B25__Visit__c.field-meta.xml
<CustomField>
    <fullName>B25__Visit__c</fullName>
    <formula>&apos;Set up the Resource Types &amp; Resources hierarchy&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit</label>
    <type>Text</type>
</CustomField>