force-app/main/default/objects/B25__Reservation__c/fields/B25__What_Is_This__c.field-meta.xml
<CustomField>
    <fullName>B25__What_Is_This__c</fullName>
    <formula>&apos;You can display any reservation fields on the reservation block below, or in this hover block!&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>What&apos;s this?</label>
    <type>Text</type>
</CustomField>