force-app/main/default/objects/B25__Reservation__c/listViews/B25__All_Reservations.listView-meta.xml
<ListView>
    <fullName>B25__All_Reservations</fullName>
    <columns>NAME</columns>
    <columns>B25__ResourceName__c</columns>
    <columns>B25__Start_Local_DateTime__c</columns>
    <columns>B25__End_Local_DateTime__c</columns>
    <columns>B25__Account__c</columns>
    <columns>B25__Contact__c</columns>
    <columns>B25__Status__c</columns>
    <columns>B25__Reservation_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>